--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="main.css" />
-    </head>
-    <body>
-        <!-- HEADER -->
-        <header>
-            <img src="" alt="" />
-            <nav class="menu"></nav>
-        </header>
-        <!-- MAIN -->
-        <main></main>
-        <!-- FOOTER -->
-        <footer>
-            <h6 class="copy">&copy;Copyright</h6>
-        </footer>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css" />
+</head>
+
+<body>
+    <!-- HEADER -->
+    <header>
+        <!-- BANNER -->
+        <picture >
+            <!-- Banner para mobile -->
+            <source srcset="
+                ./img/smartphone/playa.jpg 1x,
+                ./img/smartphone/playa@2x.jpg 2x,
+                ./img/smartphone/playa@3x.jpg 3x" media="(min-width:320px) and (orientation:portrait)">
+           
+            <!-- Banner para Desktop -->
+
+            <source srcset="
+                ./img/desktop/florAzul.jpg 1x,
+                ./img/desktop/florAzul@2x.jpg 2x," media="(min-width:1000px)">
+
+            <img class="banner" src="" alt="">
+        </picture>
+
+
+    </header>
+    <!-- MAIN -->
+    <main></main>
+    <!-- FOOTER -->
+    <footer>
+
+    </footer>
+</body>
+
 </html>
