--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!-- BANNER -->
         <picture >
             <!-- Banner para mobile -->
+            <!-- Picture y source para css no significa nada -->
             <source srcset="
                 ./img/smartphone/playa.jpg 1x,
                 ./img/smartphone/playa@2x.jpg 2x,
@@ -25,6 +26,8 @@
             <source srcset="
                 ./img/desktop/florAzul.jpg 1x,
                 ./img/desktop/florAzul@2x.jpg 2x," media="(min-width:1000px)">
+
+                <!-- solo se pone 1 img para todos los picture-->
 
             <img class="banner" src="" alt="">
         </picture>
